--- a/src/app/pages/schedule/schedule.page.html
+++ b/src/app/pages/schedule/schedule.page.html
@@ -15,7 +15,7 @@
         </ion-select>
       </ion-item>
     </div>
-    <ion-button (click)="addSchedule()" expand="block" shape="round">
+    <ion-button (click)="addSchedule()" expand="block" color="primary">
       <ion-icon slot="icon-only" name="add"></ion-icon>
     </ion-button>
   </div>
