--- a/src/app/pages/schedule/schedule.page.scss
+++ b/src/app/pages/schedule/schedule.page.scss
@@ -1,9 +1,13 @@
+@mixin flex($direction: row, $wrap: nowrap, $align: center) {
+  display: flex;
+  flex-direction: $direction;
+  flex-wrap: $wrap;
+  align-items: $align;
+}
+
 div.flex-toolbar {
   max-width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
+  @include flex;
 }
 
 div.no-schedule {
@@ -18,11 +22,8 @@ div.no-schedule {
 
 div.flex {
   margin: 0.5em 0 1em;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  @include flex($wrap: wrap);
   max-width: 100%;
-  align-items: center;
   justify-content: space-between;
   padding: 0 1em;
 
@@ -39,19 +40,15 @@ div.flex {
   }
 }
 
+
+
 div.page-navbar {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  @include flex;
   gap: 1em;
-  align-items: center;
   justify-content: center;
   width: 80%;
   height: 3em;
-  position: absolute;
-  bottom: 8em;
-  left: 10%;
-  margin: 20px auto;
+  margin: min(10%, 3em) auto 20px;
 
   div.current-page{
     height: 2em;
@@ -102,29 +99,3 @@ div.page-navbar {
 ion-chip {
   text-transform: capitalize;
 }
-
-// ion-button {
-//   --background: #3880ff;
-//   --background-activated: #3880ff;
-//   --background-activated-opacity: 1;
-//   --background-focused: #3880ff;
-//   --background-focused-opacity: 1;
-//   --background-hover: #3880ff;
-//   --background-hover-opacity: 1;
-//   --border-color: #3880ff;
-//   --border-radius: 8px;
-//   --border-style: solid;
-//   --border-width: 8px;
-//   --box-shadow: 10px 10px;
-//   --color: #ffffff;
-//   --color-activated: #ffffff;
-//   --color-focused: #ffffff;
-//   --color-hover: #ffffff;
-//   --opacity: 1;
-//   --padding-bottom: 4px;
-//   --padding-end: 4px;
-//   --padding-start: 4px;
-//   --padding-top: 4px;
-//   --ripple-color: #1e1e1e;
-//   --transition: background-color 15ms linear;
-// }
