--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -17,8 +17,9 @@
             <ion-label position="floating">Password <ion-text color="danger">*</ion-text></ion-label>
             <ion-input required formControlName="password" type="password"></ion-input>
           </ion-item>
-          <ion-button block color="primary" type="submit" [disabled]="loginForm.invalid">
-            Login
+          <ion-button block color="primary" type="submit" [disabled]="loginForm.invalid || isLoggingIn">
+            <ion-label *ngIf="!isLoggingIn">Login</ion-label>
+            <ion-spinner name="circular" *ngIf="isLoggingIn"></ion-spinner>
           </ion-button>
         </form>
         <br/>
