--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -17,8 +17,9 @@
             <ion-label position="floating">Password <ion-text color="danger">*</ion-text></ion-label>
             <ion-input formControlName="password" type="password"></ion-input>
           </ion-item>
-          <ion-button block color="primary" type="submit" [disabled]="signupForm.invalid">
-            Sign Up
+          <ion-button block color="primary" type="submit" [disabled]="signupForm.invalid || isSigningUp">
+            <ion-label *ngIf="!isSigningUp">Sign Up</ion-label>
+            <ion-spinner name="circular" *ngIf="isSigningUp"></ion-spinner>
           </ion-button>
         </form>
         <br/>
