+added: necessary disclaimers

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       ></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="logout()" color="danger">
+      <ion-button (click)="logout()" color="danger" fill="outline" class="logout-button">
         <ion-icon slot="end" name="exit"></ion-icon>
         Logout
       </ion-button>
