--- a/src/app/pages/recurring/new/new.page.html
+++ b/src/app/pages/recurring/new/new.page.html
@@ -76,6 +76,11 @@
               ></ion-input>
             </ion-item>
           </div>
+          <div>
+            <ion-text color="danger">
+              <h5><ion-icon slot="start" name="warning"></ion-icon> Use this only if you're absolutely sure you know what you're doing</h5>
+            </ion-text>
+          </div>
         </div>
 
         <!-- Interval Input -->
