--- a/src/app/pages/recurring/recurring.page.html
+++ b/src/app/pages/recurring/recurring.page.html
@@ -19,7 +19,7 @@
         </ion-select>
       </ion-item>
     </div>
-    <ion-button (click)="addTask()" shape="round">
+    <ion-button (click)="addTask()" id="add-button">
       <ion-icon slot="icon-only" name="add"></ion-icon>
     </ion-button>
   </div>
