--- a/src/app/pages/recurring/recurring.page.scss
+++ b/src/app/pages/recurring/recurring.page.scss
@@ -21,3 +21,7 @@ div.accordion-content {
   background-color: #f3fffe;
   border-radius: 8px;
 }
+
+ion-button#add-button {
+  --border-radius: 6px;
+}
