+changed: background color

--- a/src/global.scss
+++ b/src/global.scss
@@ -93,7 +93,7 @@ div.selected-chats-container{
 }
 
 ion-content {
-  --background:linear-gradient(150deg, #8afdf6, #8afdf6 65%,#c7fffb 70%, #8afdf6 );
+  --background:linear-gradient(150deg, #d4fffc, #d4fffc 65%,#c7fffb 70%, #d4fffc );
 }
 
 ion-searchbar.custom-searchbar {
