--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,6 +7,7 @@
       <ion-card-title>LOGIN</ion-card-title>
     </ion-card-header>
     <ion-card-content>
+
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <ion-item lines="none">
           <ion-input email required formControlName="email" type="text" placeholder="Email"></ion-input>
@@ -21,9 +22,34 @@
           <ion-label *ngIf="!isLoggingIn">Login</ion-label>
           <ion-spinner name="circular" *ngIf="isLoggingIn"></ion-spinner>
         </ion-button>
+        <ion-text color="dark">
+          <h2>Or</h2>
+        </ion-text>
+        <br/>
+        <!-- Google sign in -->
+        <div class="google-btn">
+          <div class="google-icon-wrapper">
+            <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+          </div>
+          <p class="btn-text">
+            <a href="https://accounts.google.com/o/oauth2/v2/auth?access_type=offline&client_id=489910404758-obtqbitdmkv87boncqfflqlavm3sftqi.apps.googleusercontent.com&prompt=consent&redirect_uri=http%3A%2F%2Flocalhost%3A8100%2Fgauthcallback&response_type=code&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email">
+              <b>Sign in with google</b>
+            </a>
+          </p>
+        </div>
       </form>
       <br/>
-      <ion-text>New to WhatScheduler? <span class="link" (click)="gotoSignup()">Signup!</span></ion-text>
+        <ion-text>New to WhatScheduler? <span class="link" (click)="gotoSignup()">Signup!</span></ion-text>
+        <br/>
+        <ion-text>
+          Or <a href="https://github.com/DreadedHippy/whatScheduler/blob/master/README.md">Learn more</a>
+        </ion-text>
+      <br/>
+      <ion-text color="primary">
+      </ion-text>
+
+
+      <!-- Google sign-in button -->
     </ion-card-content>
   </ion-card>
 </ion-content>
