--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -21,9 +21,28 @@
             <ion-label *ngIf="!isSigningUp">Sign Up</ion-label>
             <ion-spinner name="circular" *ngIf="isSigningUp"></ion-spinner>
           </ion-button>
+          <ion-text color="dark">
+            <h2>Or</h2>
+          </ion-text>
+          <br/>
+          <!-- Google sign in -->
+          <div class="google-btn">
+            <div class="google-icon-wrapper">
+              <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+            </div>
+            <p class="btn-text">
+              <a href="https://accounts.google.com/o/oauth2/v2/auth?access_type=offline&client_id=489910404758-obtqbitdmkv87boncqfflqlavm3sftqi.apps.googleusercontent.com&prompt=consent&redirect_uri=http%3A%2F%2Flocalhost%3A8100%2Fgauthcallback&response_type=code&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email">
+                <b>Sign in with google</b>
+              </a>
+            </p>
+          </div>
         </form>
         <br/>
         <ion-text>Already have an account? <span class="link" (click)="gotoLogin()">Login here!</span></ion-text>
+        <br/>
+        <ion-text>
+          Or <a href="https://github.com/DreadedHippy/whatScheduler/blob/master/README.md">Learn more</a>
+        </ion-text>
       </ion-card-content>
     </ion-card>
   </div>
