--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -32,7 +32,7 @@
             <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
           </div>
           <p class="btn-text">
-            <a href="https://accounts.google.com/o/oauth2/v2/auth?access_type=offline&client_id=489910404758-obtqbitdmkv87boncqfflqlavm3sftqi.apps.googleusercontent.com&prompt=consent&redirect_uri=http%3A%2F%2Flocalhost%3A8100%2Fgauthcallback&response_type=code&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email">
+            <a [href]="googleRedirectUri">
               <b>Sign in with google</b>
             </a>
           </p>
