--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -32,7 +32,7 @@
             <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
           </div>
           <p class="btn-text">
-            <a [href]="googleRedirectUri">
+            <a [href]="googleRedirectUri" target="_blank">
               <b>Sign in with google</b>
             </a>
           </p>
